# Gaussian-fire-OpenGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  slides.md
data/: fire.tga  wood-2.tga  wood-3.tga  wood.tga
scenes/: main.scene  main_big_fire.scene  simple_fire.scene
shaders/: debug_quad_fragment.shd  fire_fragment.shd  fire_vertex.shd  fragment.shd  main_fragment.shd  main_vertex.shd  shadow_fragment.shd  shadow_vertex.shd  vertex.shd
src/: camera.hh  fire_shader.hh  image.cc  image.hh  image_io.cc  image_io.hh  keyboard_handler.hh  light.hh  main.cc  main_shader.hh  model.cc  model.hh  mouse_handler.hh  obj_loader.cc  obj_loader.hh  object_vbo.hh  particle.hh  program_propreties.hh  quad_shader.hh  renderer.hh  shader_handler.hh  shadow_shader.hh
